syntax = "proto3";

package berty.entity;

option go_package = "berty.tech/core/entity";

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "entity/device.proto";

message Contact {
  enum Status {
    Unknown = 0;
    IsFriend = 1;
    IsTrustedFriend = 2;
    IsRequested = 3;
    RequestedMe = 4;
    IsBlocked = 5;
    Myself = 42;
  }

  //
  // gorm fields
  //

  string id = 1 [(gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp deleted_at = 4 [(gogoproto.stdtime) = true];

  //
  // internal fields
  //

  Status status = 10;

  //
  // association fields
  //

  // Sigchain sigchain = 20;
  repeated Device devices = 21; // HasMany to Device.Contact

  //
  // profile fields
  //

  string display_name = 30;
  string display_status = 31;

  //
  // overridable fields
  //

  string override_display_name = 130;
  string override_display_status = 131;
}
