syntax = "proto3";

package berty.entity;

option go_package = "berty.tech/core/entity";

import "api/protobuf/graphql/graphql.proto";
import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

message Device {
  enum Status {
    Unknown = 0;
    Connected = 1;
    Disconnected = 2;
    Available = 3;
    Myself = 42;
  }

  //
  // gorm fields
  //

  string id = 1 [(gql.graphql_id) = true, (gogoproto.moretags) = "gorm:\"primary_key\"", (gogoproto.customname) = "ID"];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp deleted_at = 4 [(gogoproto.stdtime) = true];

  //
  // metadata fields
  //

  string name = 5;

  //
  // internal fields
  //

  Status status = 10;
  uint32 api_version = 11;

  //
  // association fields
  //

  string contact_id = 12 [(gogoproto.customname) = "ContactID"]; // backref to Contact.Device
}
